@@ -41,6 +41,7 @@ Revision 0.2.7, released XX-09-2019
 - Added RFC8479 providing Storing Validation Parameters in PKCS#8
 - Added RFC8360 providing Resource Public Key Infrastructure (RPKI)
   Validation Reconsidered
+- Added RFC8358 providing Digital Signatures on Internet-Draft Documents
 
 Revision 0.2.6, released 31-07-2019
 -----------------------------------
